--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="{% static 'style.css' %}" />
 	<head>
 		<meta charset="utf-8" />
-		<title>My test page</title>
+		<title>What is This?</title>
 	</head>
 	<body>
 		{% block content %} {% endblock %}
