--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<link rel="stylesheet" href="{% static 'style.css' %}" />
+	<link rel="shortcut icon" href="{%  static 'img/favicon/favicon.ico' %}" />
 	<head>
 		<meta charset="utf-8" />
 		<title>What is This?</title>
