--- a/app/static/style.css
+++ b/app/static/style.css
@@ -37,6 +37,7 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 container > h1 {
@@ -44,6 +45,12 @@ container > h1 {
     font-size: 3rem;
     -webkit-text-stroke: 1px black;
     margin-bottom: 1rem;
+}
+
+container > h2 {
+    margin-top: 3rem;
+    color: white;
+    -webkit-text-stroke: 1px black;
 }
 
 form > *{
@@ -59,9 +66,16 @@ label{
     margin-bottom: 1rem;
 }
 
+.bottom{
+    margin-top: 1.75rem;
+    margin-bottom: 0.25rem;
+    font-size: 0.75rem;
+}
+
 .send{
     color: white;
     font-size: 1.25rem;
+    padding-bottom: 1rem;
     font-weight: bold;
     background-color: rgb(133, 32, 65);
     border-radius: 5px;
@@ -69,10 +83,16 @@ label{
     border: 2px solid black;
     padding: 0.5em 0.75em;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 .send:hover{
     border: 2px solid white;
     background-color: rgb(192, 25, 81);
     color: black;
+}
+
+input[type="text"] {
+    font-size: 1.75rem;
+    border-radius: 5px;
 }
