--- a/app/static/style.css
+++ b/app/static/style.css
@@ -37,7 +37,7 @@ form{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 150%;
 }
 
 container > h1 {
@@ -86,6 +86,15 @@ label{
     text-decoration: none;
 }
 
+.error{
+    color: red;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 0;
+    -webkit-text-stroke: 1px black;
+}
+
 .send:hover{
     border: 2px solid white;
     background-color: rgb(192, 25, 81);
@@ -95,4 +104,6 @@ label{
 input[type="text"] {
     font-size: 1.75rem;
     border-radius: 5px;
+    text-align: center;
+    width: 150%;
 }
