--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
-	<link rel="stylesheet" href="{% static 'style.css' %}" />
+	<link rel="stylesheet" href="{% static 'style.css' %}" type="text/css" />
 	<link rel="shortcut icon" href="{%  static 'img/favicon/favicon.ico' %}" />
 	<head>
 		<meta charset="utf-8" />
