moved favicon and changed some stuff

--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -2,7 +2,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<link rel="stylesheet" href="{% static 'style.css' %}" type="text/css" />
-	<link rel="shortcut icon" href="{%  static 'img/favicon/favicon.ico' %}" />
+	<link
+		rel="shortcut icon"
+		href="{%  static 'favicon/favicon.ico' %}"
+		type="image/png"
+	/>
 	<head>
 		<meta charset="utf-8" />
 		<title>What is This?</title>
